--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@discordjs/opus": "^0.4.0",
     "discord.js": "^12.5.1",
+    "ffmpeg-static": "^4.2.7",
     "node-schedule": "^2.0.0"
   },
   "devDependencies": {
